#121027 Fixed page not found log entries for menu-collapsed.png.

--- a/admin_menu.css
+++ b/admin_menu.css
@@ -35,7 +35,7 @@ body { margin-top: 20px !important; }
 #admin_menu li:hover ul, #admin_menu li li:hover ul, #admin_menu li li li:hover ul, #admin_menu li.sfhover ul, #admin_menu li li.sfhover ul, #admin_menu li li li.sfhover ul { left: auto; }
 
 /* second-and-more-level hovering */
-#admin_menu li li.expandable { background: #606066 url(/misc/menu-collapsed.png) no-repeat 145px 7px; }
+#admin_menu li li.expandable { background: #606066 url(../../../../misc/menu-collapsed.png) no-repeat 145px 7px; }
 #admin_menu li li:hover, #admin_menu li li.sfhover { background-color: #333333; }
 #admin_menu li li:hover a, #admin_menu li li:hover li:hover a, #admin_menu li li:hover li:hover li:hover a { font-weight: bold; }
 #admin_menu li li.expandable:hover a, #admin_menu li li.expandable:hover li.expandable:hover a { border-color: #666666; font-weight: normal; }
